# C-A-E-L-I-S

./: .gitignore  README.md  pyproject.toml
src/caelis/: main.py
src/caelis/core/: config.py  engine.py  router.py
src/caelis/intelligence/: brain.py
src/caelis/language/: detector.py
src/caelis/voice/: listener.py  speech.py
