[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "caelis"
version = "0.1.0"
description = "Cognitive Autonomous Entity with Lucidity, Intelligence & Synthesis"
readme = "README.md"
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
caelis = "caelis.main:main"